tests/NormalTests/paczka1/small_fuzzy/87108257.err
Error in line 2: BMZW1f8Q S856 93,0
Error in line 3: lzeDl4w0 A197 44,8
Error in line 6: lzeDl4w0 S716 4,7
Error in line 10: lzeDl4w0 S856 75,2
